--- a/ds-assignment2.ipynb
+++ b/ds-assignment2.ipynb
@@ -38,21 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "id": "f53969a7-b4f4-4158-901d-ce48f7cf9c8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dataset contains 10000 rows and 23 columns\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the dataset (Source Kaggle.com, Credit Card Fraud Data)\n",
     "df = pd.read_csv('/Users/pradyumna/pradyapps/bits/3rd-sem/data-science/assignment2/creditcard-fraud-data.csv')\n",
     "\n",
-    "# Get number of rows and columns in the dataset\n",
-    "display_shape = df.shape\n"
+    "#Print count of rows and columns\n",
+    "print(f'The dataset contains {df.shape[0]} rows and {df.shape[1]} columns')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "id": "834f7cb7-62c0-4ae6-863f-197670aaa4d3",
    "metadata": {},
    "outputs": [
@@ -272,7 +280,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "id": "d8872d14-cdb1-4cf6-8ace-ebe7a258a080",
    "metadata": {},
    "outputs": [],
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 71,
    "id": "6d8fc017-69dd-4564-888d-e03ab3eb69c4",
    "metadata": {},
    "outputs": [],
@@ -325,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "id": "263f9ba8-aa8d-433e-9b84-010411734d99",
    "metadata": {},
    "outputs": [],
@@ -335,14 +343,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "id": "8f7aba05-3767-4f87-a38f-de2702b3f103",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-5 {\n",
+       "<style>#sk-container-id-6 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
@@ -372,15 +380,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 {\n",
+       "#sk-container-id-6 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 pre {\n",
+       "#sk-container-id-6 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 input.sk-hidden--visually {\n",
+       "#sk-container-id-6 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -392,7 +400,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-6 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -400,7 +408,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-container {\n",
+       "#sk-container-id-6 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -410,7 +418,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-6 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -426,14 +434,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-5 div.sk-parallel-item::after {\n",
+       "#sk-container-id-6 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-parallel {\n",
+       "#sk-container-id-6 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -441,28 +449,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-parallel-item {\n",
+       "#sk-container-id-6 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-6 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-6 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-6 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-5 div.sk-serial {\n",
+       "#sk-container-id-6 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -480,14 +488,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-5 div.sk-toggleable {\n",
+       "#sk-container-id-6 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-5 label.sk-toggleable__label {\n",
+       "#sk-container-id-6 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: block;\n",
        "  width: 100%;\n",
@@ -497,7 +505,7 @@
        "  text-align: center;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-6 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -505,13 +513,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-5 div.sk-toggleable__content {\n",
+       "#sk-container-id-6 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -520,12 +528,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-6 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-6 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -533,79 +541,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-6 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-6 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-6 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-5 div.sk-label label {\n",
+       "#sk-container-id-6 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-6 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-5 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-6 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-5 div.sk-label label {\n",
+       "#sk-container-id-6 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-label-container {\n",
+       "#sk-container-id-6 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-5 div.sk-estimator {\n",
+       "#sk-container-id-6 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -615,18 +623,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-estimator.fitted {\n",
+       "#sk-container-id-6 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-5 div.sk-estimator:hover {\n",
+       "#sk-container-id-6 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-6 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -713,7 +721,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-5 a.estimator_doc_link {\n",
+       "#sk-container-id-6 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -728,31 +736,31 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-6 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-5 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-6 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-5 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-6 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;DecisionTreeClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.tree.DecisionTreeClassifier.html\">?<span>Documentation for DecisionTreeClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>DecisionTreeClassifier(random_state=42)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;DecisionTreeClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.tree.DecisionTreeClassifier.html\">?<span>Documentation for DecisionTreeClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>DecisionTreeClassifier(random_state=42)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
        "DecisionTreeClassifier(random_state=42)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 74,
    "id": "cea61082-6b43-442a-aa97-2302ea20185e",
    "metadata": {},
    "outputs": [],
@@ -782,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
    "id": "e12e7762-c025-4c88-8d1d-38ec0f6140cf",
    "metadata": {},
    "outputs": [],
@@ -792,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "id": "f7b3930e-ce38-40f8-a5e4-416adedb02ca",
    "metadata": {},
    "outputs": [
@@ -803,7 +811,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "id": "3531c930-98b8-494d-a86e-84716b3d6213",
    "metadata": {},
    "outputs": [
@@ -868,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "id": "ff397936-09dd-4b31-834f-7e68a928307b",
    "metadata": {},
    "outputs": [
@@ -894,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "id": "f4a56499-451e-4583-a474-bf6df76b8b82",
    "metadata": {},
    "outputs": [],
@@ -904,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "id": "eb7141b7-03e2-48f2-9465-9443d4cf2ce8",
    "metadata": {},
    "outputs": [
@@ -958,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "id": "c611a2c0-0abb-4fca-8f08-aed092353a39",
    "metadata": {},
    "outputs": [
